# M3DMath

./: .gitignore  CMakeLists.txt  CMakeSettings.json  M3DMath.sln
M3DMath/: CMakeLists.txt  DoubleVectorF.cpp  M3DMath.h  M3DMath.vcxproj  M3DMath.vcxproj.filters  Vector2.cpp  Vector3.cpp  Vector4.cpp  VectorF.cpp  Win32UserProps.props  main.cpp
M3DMath/Headers/: M3DMath.h
M3DMath/Source/: CMakeLists.txt
M3DMath/Source/SIMDVectors/: CMakeLists.txt
M3DMath/Source/Vectors/: CMakeLists.txt  Vector2.cpp  Vector4.cpp
MathTests/: CMakeLists.txt  main.cpp
MathTests/Source/: CMakeLists.txt
MathTests/Source/MatrixMath/: CMakeLists.txt
MathTests/Source/MatrixMath/Matrix/: MatrixFFunctionsTester.cpp  MatrixFTester.cpp  MatrixScalarFunctionsTester.cpp  MatrixScalarTester.cpp
MathTests/Source/VectorMath/: CMakeLists.txt
MathTests/Source/VectorMath/Operations/: VectorFunctionsTester.cpp  VectorOperationsTester.cpp
MathTests/Source/VectorMath/SIMDVectors/: DoubleVectorFTestser.cpp  VectorFTester.cpp
MathTests/Source/VectorMath/Vectors/: Vector2Tester.cpp  Vector3Tester.cpp  Vector4Tester.cpp
MathTests/include/: MathTests.h
include/: M3DMath.h
libM3DMath/: CMakeLists.txt  main.cpp
libM3DMath/Source/: CMakeLists.txt
libM3DMath/Source/MatrixMath/: CMakeLists.txt
libM3DMath/Source/MatrixMath/Matrix/x86_64/: MatrixF.cpp  MatrixFFunctions.cpp
libM3DMath/Source/MatrixMath/Matrix/x86_64_ARM/: MatrixScalar.cpp  MatrixScalarFunctions.cpp
libM3DMath/Source/VectorMath/: CMakeLists.txt
libM3DMath/Source/VectorMath/Operations/x86_64/: DoubleVectorFFunctions2D.cpp  DoubleVectorFFunctions3D.cpp  DoubleVectorFFunctions4D.cpp  VectorFFunctions.cpp  VectorFFunctions2D.cpp  VectorFFunctions3D.cpp  VectorFFunctions4D.cpp
libM3DMath/Source/VectorMath/Operations/x86_64_ARM/: Vector2Functions.cpp  Vector3Functions.cpp  Vector4Functions.cpp  VectorOperations.cpp
libM3DMath/Source/VectorMath/SIMDVectors/x86_64/: DoubleVectorF.cpp  DoubleVectorFMethods.cpp  VectorF.cpp  VectorFMethods.cpp
libM3DMath/Source/VectorMath/Vectors/x86_64_ARM/: Vector2.cpp  Vector2Methods.cpp  Vector3.cpp  Vector3Methods.cpp  Vector4.cpp  Vector4Methods.cpp
