CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

# Target init
ADD_EXECUTABLE(${MATH_TESTS_TARGET} main.cpp)

# Source
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Source)

# Headers
TARGET_INCLUDE_DIRECTORIES(${MATH_TESTS_TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

# Libraries
TARGET_LINK_LIBRARIES(${MATH_TESTS_TARGET} ${M3DMATH_LIB_TARGET})