cmake_minimum_required (VERSION 3.8)

SET(LIB_HEADER_DIR "Headers")
SET(SRC_DIR "Source")
SET(M3DMATH_LIB_TARGET libMath3D)


ADD_EXECUTABLE(${M3DMATH_LIB_TARGET} main.cpp)

# Source
ADD_SUBDIRECTORY(${SRC_DIR})

# Headers
TARGET_INCLUDE_DIRECTORIES(${M3DMATH_LIB_TARGET} PRIVATE ${LIB_HEADER_DIR})

IF(ANDROID)
	TARGET_INCLUDE_DIRECTORIES(${M3DMATH_LIB_TARGET} PRIVATE ${ANDROID_TOOLCHAIN_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(${M3DMATH_LIB_TARGET} PRIVATE ${ANDROID_TOOLCHAIN_LIB_PATH})
ENDIF()