CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

# Defines
SET(SRC_DIR Source)
SET(HEADERS_DIR include)

# Target init
ADD_LIBRARY(${M3DMATH_LIB_TARGET} STATIC)

# Source
ADD_SUBDIRECTORY(${SRC_DIR})

# Headers
TARGET_INCLUDE_DIRECTORIES(${M3DMATH_LIB_TARGET} PUBLIC ${LIB_HEADER_DIR})
TARGET_INCLUDE_DIRECTORIES(${M3DMATH_LIB_TARGET} PRIVATE ${HEADERS_DIR})

IF(ANDROID)
	TARGET_INCLUDE_DIRECTORIES(${M3DMATH_LIB_TARGET} PRIVATE ${ANDROID_TOOLCHAIN_INCLUDE_DIR})
	TARGET_LINK_LIBRARIES(${M3DMATH_LIB_TARGET} PRIVATE ${ANDROID_TOOLCHAIN_LIB_PATH})
ENDIF()